--- a/Desafio RocketCoffee/style.css
+++ b/Desafio RocketCoffee/style.css
@@ -69,19 +69,16 @@ button {
   font-size: 11px;
   line-height: 15px;
   letter-spacing: 0.02em;
-  width: 190px;
+  width: 100%;
   height: 37px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 11px 38px;
+  padding: 4px;
   border: 1px solid #8257e5;
   box-sizing: border-box;
   border-radius: 6px;
 }
 
 button:hover {
+  border-radius: 6px;
   background-color: rgb(31, 2, 31);
   border-color: transparent;
   -webkit-transform: scale(1.05);
@@ -124,4 +121,9 @@ button:hover {
   stroke-width: 1px;
   text-shadow: -1px -1px 0 var(--button), 1px -1px 0 var(--button),
     -1px 1px 0 var(--button), 1px 1px 0 var(--button);
+}
+
+.logo,
+.botao {
+  width: 10%;
 }
