--- a/Desafio RocketBlog/style.css
+++ b/Desafio RocketBlog/style.css
@@ -1,13 +1,19 @@
+:root {
+  font-size: 62.5%;
+}
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
 }
 
-body {
-  width: 100%;
-  height: 100%;
+p {
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
+
 .topo {
   background-color: #290742;
   width: 100%;
@@ -20,25 +26,23 @@ body {
 }
 navbar {
   width: 100%;
+  height: 5vh;
   color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-navbar h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-}
-
 navbar input {
-  width: 230px;
-  height: 44px;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.5rem;
 }
 
 ul {
   display: flex;
   gap: 25px;
+  font-size: 1.6rem;
   list-style: none;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -47,7 +51,6 @@ ul {
 input {
   background-color: #170027;
   color: white;
-  border-radius: 7%;
 }
 
 .coletion {
@@ -58,16 +61,15 @@ input {
   height: 100%;
 }
 .lupa {
-  padding: 7%;
-  width: 100%;
   color: white;
   height: 100%;
+  border-radius: 0.5rem;
   background-color: #9e6dc2;
-  border-radius: 7%;
 }
 
 .main-topo {
   display: flex;
+  gap: 2vh;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -124,19 +126,21 @@ input {
 .lorem {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+
+  font-size: 1.6rem;
 }
 
 .data {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+
+  font-size: 1.6rem;
 }
 
 .title-bold {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 2.4rem;
   color: #290742;
 }
 
@@ -217,4 +221,68 @@ li:hover {
   color: #fbf6ff;
   font-weight: 700;
   padding-right: 2%;
+}
+
+.light {
+  border-radius: 2rem;
+  width: 7rem;
+  height: 100%;
+  background-color: rgb(27, 1, 27);
+  color: #b26fe2;
+
+  font-family: sans-serif;
+  border: 1px solid white;
+  padding: 0.2rem;
+}
+
+.light:hover {
+  border: none;
+  background-color: rgb(54, 1, 54);
+  color: white;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+@media (max-width: 1250px) {
+  .main-topo {
+    display: flex;
+    gap: 2vh;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+  }
+
+  ul {
+    position: absolute;
+    top: 0 vh;
+    right: 0;
+    width: 50vh;
+    color: rgb(2, 1, 1);
+    height: 92vh;
+    background-color: #c5c5cf;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .elements-mid {
+    padding: 5%;
+    padding-left: 15%;
+    padding-right: 15%;
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+  }
+
+  .footer-images {
+    padding: 5%;
+    padding-top: 0;
+    padding-left: 15%;
+    padding-right: 15%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 100px;
+  }
 }
