--- a/Desafio RocketCoffee/style.css
+++ b/Desafio RocketCoffee/style.css
@@ -16,12 +16,6 @@
   --text-color-menu-mobile: #e1e1e6;
 }
 
-.bur-01 {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
-
 li {
   list-style-type: none;
 }
@@ -33,7 +27,7 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 10vh;
+  height: 8vh;
 }
 
 ul {
@@ -126,4 +120,31 @@ button:hover {
 .logo,
 .botao {
   width: 10%;
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-menu div {
+  width: 2rem;
+  height: 0.2rem;
+  background: white;
+  margin: 0.4rem;
+}
+
+@media (max-width: 1200px) {
+  ul {
+    position: absolute;
+    top: 0 vh;
+    right: 0;
+    width: 50vh;
+    color: rgb(2, 1, 1);
+    height: 92vh;
+    background-color: #c5c5cf;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
 }
